--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+
 <body>
-    
+    <!-- header starts here -->
+    <header>
+        <div class="bg-header">
+            <div class="left-div_header">
+                <h1>Let's make<br>beautiful flowers a<br>part of your life.</h1>
+        <p><small>It is a long established fact that a reader will be  distracted by the readable content of a  <br> when looking  its layout. The point of using Lorem Ipsum is 
+            more-or-less normal.</p></small>
+        <button class="btn" type="submit">Shop Now</button>
+
+            </div>
+            <div class="right-div_header">
+                <img src="images/pngwing 10.png" alt="" class="img_01">
+
+            </div>
+        </div>
+    </header>
+     <!-- header ends here -->
+
+     
 </body>
 </html>
