service section added

--- a/index.html
+++ b/index.html
@@ -73,6 +73,37 @@
         </section>
         <!-- feature section endss here -->
 
+        <!-- service section starts here -->
+        <section class="section_02">
+        <div class="service_container">
+
+            <div class="left-div_01 center__02">
+                       <img src="images/Group 57.png" alt="" class="img_03">
+                       <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+
+            <div class="middle-div_01 center__02">
+                <img src="images/Group 58.png" alt="" class="img_03">
+                <p>Fresh Flowers. Local Growers.</p>
+
+            </div>
+
+            <div class="right-div_01 center__02">
+                <img src="images/Group 59.png" alt="" class="img_03">
+                <p>24/7 Free Support.</p>
+
+
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+
+        <!-- service section ends here -->
+
 
      </main>
 
