signup section added

--- a/index.html
+++ b/index.html
@@ -98,11 +98,40 @@
         </div>
 
     </section>
+    <!-- service section ends here -->
 
 
 
 
-        <!-- service section ends here -->
+
+
+    <!-- signup section starts here -->
+
+    <div class="signup_bg">
+
+        <div class="signup_container">
+              <div class="left-div_03">
+                <h1 class="heading-02">Hot Deal ! Sale Up To 25% Off</h1>
+                <p class="pera_01">It is a long established fact that a reader will be distracted by <br> the readable content of a page when 
+                </p>
+                <div class="btn_01-01"><iv/d>
+                <button type="button" class="btn_01">Sign Up</button>
+                </div>
+
+
+              </div>
+              <div class="right-div_03">
+                <img class="img_04" src="images/pngwing 8.png" alt="">
+
+              </div>
+        </div>
+
+    </div>
+  
+
+
+
+    <!-- signup section starts here -->
 
 
      </main>
