instagram section added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
     <!-- signup section starts here -->
-
+     <section>
     <div class="signup_bg">
 
         <div class="signup_container">
@@ -127,11 +127,57 @@
         </div>
 
     </div>
+</section>
   
 
 
 
     <!-- signup section starts here -->
+
+
+
+
+
+
+    <!-- instagram section starts here -->
+    <section>
+        <div class="instagram_container">
+            <h1 class="center_04 instragram_heading">Instagram</h1>
+            <br>
+            <p class="center_04 pera_02">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+
+            <br><br><br>
+
+            <div class="img_container">
+
+            <div class="img_05">
+                     <img class="img_06" src="images/Flower 01.png" alt="">
+            </div>
+
+            <div class="img_05">
+                <img class="img_06" src="images/Rectangle 4.png" alt="">
+
+            </div>
+
+            <div class="img_05">
+                <img class="img_06" src="images/Rectangle 5.png" alt="">
+
+            </div>
+
+            <div class="img_05">
+                <img class="img_06" src="images/Rectangle 6.png" alt="">
+
+            </div>
+
+           </div> 
+            
+            </div>
+
+       </section>
+
+    <!-- instagram section ends here -->
+
+
 
 
      </main>
