banner section added

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <div class="signup_container">
               <div class="left-div_03">
-                <h1 class="heading-02">Hot Deal ! Sale Up To 25% Off</h1>
+                <h1 class="heading-02">Hot Deal ! Sale Up To 25% <span> Off</span></h1>
                 <p class="pera_01">It is a long established fact that a reader will be distracted by <br> the readable content of a page when 
                 </p>
                 <div class="btn_01-01"><iv/d>
@@ -176,6 +176,27 @@
        </section>
 
     <!-- instagram section ends here -->
+
+
+
+
+
+
+    <!-- banner section starts here -->
+    <section>
+        <div class="banner-bg">
+            <div class="banner_container">
+                <h1 class="heading_04">Get The Latest Deals</h1>
+                <p class="pera_03">$30 coupon for first shopping</p>
+                <div class="sec">
+                <input type="email" class="email_01" placeholder="Enter your email here" >
+                <button class="btn_02">Subscribe</button>
+            </div>
+            </div>
+        </div>
+        
+    </section>
+    <!-- banner section ends here -->
 
 
 
