--- a/index.html
+++ b/index.html
@@ -197,12 +197,27 @@
         
     </section>
     <!-- banner section ends here -->
+    </main>
 
 
+    <!-- footer section starts -->
 
+    <footer>
+        <div class="bg-img_07">
+            <div class="footer_container">
+        <h1 class="heading_06"><span>Flower</span>Shop</h1>
+        <p class="pera_06">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        <p class="pera_07">
+            @2020-2023, FlowerShop.com. All rights reserved.  
+        </p>
+       </div>
+    </div>
 
-     </main>
+    </footer>
+
+    <!-- footer section ends -->
 
 
 </body>
+
 </html>
